création des pages contact-aboutus-legalinformation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,6 +52,18 @@
     </tr>
   </table>
 </body>
-<footer>
-
+<footer class="footer">
+  <div class="container col-12 d-flex">
+    <ul class="nav d-inline d-md-flex mt-lg-4 col-lg-7 ml-lg-5">
+      <li class="nav-item link">
+        <a class="nav-link active" href="#">A propos</a>
+      </li>
+      <li class="nav-item link">
+        <a class="nav-link" href="#">Mentions légales</a>
+      </li>
+      <!-- <li class="nav-item link">
+           créer les routes--------<a class="nav-link" [routerLink]="../contact">Contact</a>
+        </li>-->
+    </ul>
+  </div>
 </footer>
