--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -35,4 +35,12 @@ h1{
     -webkit-animation: rotating 6s linear infinite;
 }.rotating:hover{
     -webkit-animation: rotating 8s linear infinite;
-    }
+}
+
+footer{
+    background-color: black;
+    width: 100%;
+    height:30px;
+    position:absolute;
+    bottom:0;
+   }
