--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -36,3 +36,11 @@ h1{
 }.rotating:hover{
     -webkit-animation: rotating 8s linear infinite;
     }
+
+
+video{ 
+    position: fixed; right: 0; bottom: 0;
+    min-width: 100%; min-height: 100%;
+    width: auto; height: auto; z-index: 500;
+    background-size: cover; 
+    }
