--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,56 +1,70 @@
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Space Wiki !</h1>
-  <table class="firstDiv">
-    <tr>
-      <td class="rotating"> <a href="/wiki/Kerbol" title="Solar"><img alt="TinyKerbol.png"
-            src="https://wiki.kerbalspaceprogram.com/images/thumb/9/96/TinyKerbol.png/125px-TinyKerbol.png" width="250"
-            height="250"
-            srcset="/images/thumb/9/96/TinyKerbol.png/188px-TinyKerbol.png 1.5x, /images/thumb/9/96/TinyKerbol.png/250px-TinyKerbol.png 2x" /></a>
-      </td>
-      <td class="rotating"> <a href="/wiki/Moho" title="Mercure"><img alt="TinyMoho.png"
-            src="https://wiki.kerbalspaceprogram.com/images/thumb/3/31/TinyMoho.png/100px-TinyMoho.png" width="100"
-            height="100" srcset="/images/3/31/TinyMoho.png 1.5x" /></a>
-      </td>
-      <td class="rotating"> <a href="/wiki/Eve" title="Venus"><img alt="TinyEve.png"
-            src="https://wiki.kerbalspaceprogram.com/images/thumb/0/03/TinyEve.png/100px-TinyEve.png" width="100"
-            height="100"
-            srcset="/images/thumb/0/03/TinyEve.png/150px-TinyEve.png 1.5x, /images/thumb/0/03/TinyEve.png/200px-TinyEve.png 2x" /></a>
-      </td>
-      <td class="rotating"> <a href="/wiki/Kerbin" title="Earth"><img alt="TinyKerbin.png"
-            src="https://wiki.kerbalspaceprogram.com/images/thumb/5/5d/TinyKerbin.png/100px-TinyKerbin.png" width="100"
-            height="100"
-            srcset="/images/thumb/5/5d/TinyKerbin.png/150px-TinyKerbin.png 1.5x, /images/thumb/5/5d/TinyKerbin.png/200px-TinyKerbin.png 2x" /></a>
-      </td>
-      <td class="rotating"> <a href="/wiki/Duna" title="Mars"><img alt="TinyDuna.png"
-            src="https://wiki.kerbalspaceprogram.com/images/thumb/1/17/TinyDuna.png/100px-TinyDuna.png" width="100"
-            height="100"
-            srcset="/images/thumb/1/17/TinyDuna.png/150px-TinyDuna.png 1.5x, /images/thumb/1/17/TinyDuna.png/200px-TinyDuna.png 2x" /></a>
-      </td>
-      <td class="rotating"> <a href="/wiki/Dres" title="Jupiter"><img alt="TinyDres.png"
-            src="https://wiki.kerbalspaceprogram.com/images/thumb/d/dd/TinyDres.png/100px-TinyDres.png" width="100"
-            height="100"
-            srcset="/images/thumb/d/dd/TinyDres.png/150px-TinyDres.png 1.5x, /images/thumb/d/dd/TinyDres.png/200px-TinyDres.png 2x" /></a>
-      </td>
-      <td class="rotating"> <a href="/wiki/Jool" title="Saturne"><img alt="TinyJool.png"
-            src="https://wiki.kerbalspaceprogram.com/images/thumb/3/35/TinyJool.png/100px-TinyJool.png" width="100"
-            height="100" srcset="/images/3/35/TinyJool.png 1.5x" /></a>
-      </td>
-      <td class="rotating"> <a href="/wiki/Eeloo" title="Uranus"><img alt="TinyEeloo.png"
-            src="https://wiki.kerbalspaceprogram.com/images/thumb/e/e0/TinyEeloo.png/100px-TinyEeloo.png" width="100"
-            height="100"
-            srcset="/images/thumb/e/e0/TinyEeloo.png/150px-TinyEeloo.png 1.5x, /images/thumb/e/e0/TinyEeloo.png/200px-TinyEeloo.png 2x" /></a>
-      </td>
-      <td class="rotating"> <a href="/wiki/Eeloo" title="Neptune"><img alt="TinyEeloo.png"
-            src="https://wiki.kerbalspaceprogram.com/images/thumb/e/e0/TinyEeloo.png/100px-TinyEeloo.png" width="100"
-            height="100"
-            srcset="/images/thumb/e/e0/TinyEeloo.png/150px-TinyEeloo.png 1.5x, /images/thumb/e/e0/TinyEeloo.png/200px-TinyEeloo.png 2x" /></a>
-      </td>
-    </tr>
-  </table>
+      <!-- <div *ngIf="isVisible">
+            <video autoplay (ended)="isNotVisible()">
+                  <source src="../../assets/video/intro.mp4">
+            </video>
+      </div>
+      -->
+      <audio>
+            <source src="../../assets/audio/lasersaber.mp3" typ="audio/mpeg">
+            <source src="../../assets/audio/lasersaber.ogg" typ="audio/ogg">
+      </audio>
+      <audio controls loop autoplay>
+            <source src="../../assets/audio/halo.mp3" type="audio/mpeg">
+            <source src="../../assets/audio/halo.ogg" type="audio/ogg">
+      </audio>
+      <h1>Space Wiki !</h1>
+      <table class="firstDiv">
+            <tr>
+                  <td class="rotating"> <a href="/wiki/Kerbol" title="Solar"><img alt="TinyKerbol.png" (mouseover)="playSaber()"
+                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/9/96/TinyKerbol.png/125px-TinyKerbol.png"
+                                    width="250" height="250"
+                                    srcset="/images/thumb/9/96/TinyKerbol.png/188px-TinyKerbol.png 1.5x, /images/thumb/9/96/TinyKerbol.png/250px-TinyKerbol.png 2x" /></a>
+                  </td>
+                  <td class="rotating"> <a href="/wiki/Moho" title="Mercure"><img alt="TinyMoho.png" (mouseover)="playSaber()"
+                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/3/31/TinyMoho.png/100px-TinyMoho.png"
+                                    width="100" height="100" srcset="/images/3/31/TinyMoho.png 1.5x" /></a>
+                  </td>
+                  <td class="rotating"> <a href="/wiki/Eve" title="Venus"><img alt="TinyEve.png" (mouseover)="playSaber()"
+                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/0/03/TinyEve.png/100px-TinyEve.png"
+                                    width="100" height="100"
+                                    srcset="/images/thumb/0/03/TinyEve.png/150px-TinyEve.png 1.5x, /images/thumb/0/03/TinyEve.png/200px-TinyEve.png 2x" /></a>
+                  </td>
+                  <td class="rotating"> <a href="/wiki/Kerbin" title="Earth"><img alt="TinyKerbin.png" (mouseover)="playSaber()"
+                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/5/5d/TinyKerbin.png/100px-TinyKerbin.png"
+                                    width="100" height="100"
+                                    srcset="/images/thumb/5/5d/TinyKerbin.png/150px-TinyKerbin.png 1.5x, /images/thumb/5/5d/TinyKerbin.png/200px-TinyKerbin.png 2x" /></a>
+                  </td>
+                  <td class="rotating"> <a href="/wiki/Duna" title="Mars"><img alt="TinyDuna.png" (mouseover)="playSaber()"
+                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/1/17/TinyDuna.png/100px-TinyDuna.png"
+                                    width="100" height="100"
+                                    srcset="/images/thumb/1/17/TinyDuna.png/150px-TinyDuna.png 1.5x, /images/thumb/1/17/TinyDuna.png/200px-TinyDuna.png 2x" /></a>
+                  </td>
+                  <td class="rotating"> <a href="/wiki/Dres" title="Jupiter"><img alt="TinyDres.png" (mouseover)="playSaber()"
+                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/d/dd/TinyDres.png/100px-TinyDres.png"
+                                    width="100" height="100"
+                                    srcset="/images/thumb/d/dd/TinyDres.png/150px-TinyDres.png 1.5x, /images/thumb/d/dd/TinyDres.png/200px-TinyDres.png 2x" /></a>
+                  </td>
+                  <td class="rotating"> <a href="/wiki/Jool" title="Saturne"><img alt="TinyJool.png" (mouseover)="playSaber()"
+                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/3/35/TinyJool.png/100px-TinyJool.png"
+                                    width="100" height="100" srcset="/images/3/35/TinyJool.png 1.5x" /></a>
+                  </td>
+                  <td class="rotating"> <a href="/wiki/Eeloo" title="Uranus"><img alt="TinyEeloo.png" (mouseover)="playSaber()"
+                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/e/e0/TinyEeloo.png/100px-TinyEeloo.png"
+                                    width="100" height="100"
+                                    srcset="/images/thumb/e/e0/TinyEeloo.png/150px-TinyEeloo.png 1.5x, /images/thumb/e/e0/TinyEeloo.png/200px-TinyEeloo.png 2x" /></a>
+                  </td>
+                  <td class="rotating"> <a href="/wiki/Eeloo" title="Neptune"><img alt="TinyEeloo.png" (mouseover)="playSaber()"
+                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/e/e0/TinyEeloo.png/100px-TinyEeloo.png"
+                                    width="100" height="100"
+                                    srcset="/images/thumb/e/e0/TinyEeloo.png/150px-TinyEeloo.png 1.5x, /images/thumb/e/e0/TinyEeloo.png/200px-TinyEeloo.png 2x" /></a>
+                  </td>
+            </tr>
+      </table>
 </body>
 <footer>
 
