--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -11,9 +11,7 @@
     We hope you will enjoy discovering our work and remain available via the contact page for any constructive
     suggestion that will allow us to go further in our visitors' research.
 
-    The SpaceWiki team.
-
-    Translated with www.DeepL.com/Translator </p>
+    The SpaceWiki team.</p>
 </div>
 
 <div class=" container theTeam d-flex justify-content-center">
@@ -29,5 +27,7 @@
     <label for="celine">Céline Hénichard
       <img src="http://tof.cx/images/2019/04/25/3b07ad847eebe216e895d22df9ddd8e7.png" alt="Céline Hénichard"></label>
   </div>
-
+</div>
+<div class="centerButton">
+  <button routerLink="/home">Home</button>
 </div>
