--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,45 +20,53 @@
       <h1>Space Wiki !</h1>
       <table class="firstDiv">
             <tr>
-                  <td class="rotating"> <a href="/wiki/Kerbol" title="Solar"><img alt="TinyKerbol.png" (mouseover)="playSaber()"
+                  <td class="rotating"> <a><img alt="TinyKerbol.png"
+                                    (mouseover)="playSaber()"
                                     src="https://wiki.kerbalspaceprogram.com/images/thumb/9/96/TinyKerbol.png/125px-TinyKerbol.png"
-                                    width="250" height="250"
-                                    srcset="/images/thumb/9/96/TinyKerbol.png/188px-TinyKerbol.png 1.5x, /images/thumb/9/96/TinyKerbol.png/250px-TinyKerbol.png 2x" /></a>
+                                    width="250" height="250"></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Moho" title="Mercure"><img alt="TinyMoho.png" (mouseover)="playSaber()"
+                  <td class="rotating"> <a href="/wiki/Moho" title="Mercure"><img alt="TinyMoho.png"
+                                    (mouseover)="playSaber()"
                                     src="https://wiki.kerbalspaceprogram.com/images/thumb/3/31/TinyMoho.png/100px-TinyMoho.png"
                                     width="100" height="100" srcset="/images/3/31/TinyMoho.png 1.5x" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Eve" title="Venus"><img alt="TinyEve.png" (mouseover)="playSaber()"
+                  <td class="rotating"> <a href="/wiki/Eve" title="Venus"><img alt="TinyEve.png"
+                                    (mouseover)="playSaber()"
                                     src="https://wiki.kerbalspaceprogram.com/images/thumb/0/03/TinyEve.png/100px-TinyEve.png"
                                     width="100" height="100"
                                     srcset="/images/thumb/0/03/TinyEve.png/150px-TinyEve.png 1.5x, /images/thumb/0/03/TinyEve.png/200px-TinyEve.png 2x" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Kerbin" title="Earth"><img alt="TinyKerbin.png" (mouseover)="playSaber()"
+                  <td class="rotating"> <a routerLink="/demo" title="Earth"><img alt="TinyKerbin.png"
+                                    (mouseover)="playSaber()"
                                     src="https://wiki.kerbalspaceprogram.com/images/thumb/5/5d/TinyKerbin.png/100px-TinyKerbin.png"
                                     width="100" height="100"
                                     srcset="/images/thumb/5/5d/TinyKerbin.png/150px-TinyKerbin.png 1.5x, /images/thumb/5/5d/TinyKerbin.png/200px-TinyKerbin.png 2x" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Duna" title="Mars"><img alt="TinyDuna.png" (mouseover)="playSaber()"
+                  <td class="rotating"> <a href="/wiki/Duna" title="Mars"><img alt="TinyDuna.png"
+                                    (mouseover)="playSaber()"
                                     src="https://wiki.kerbalspaceprogram.com/images/thumb/1/17/TinyDuna.png/100px-TinyDuna.png"
                                     width="100" height="100"
                                     srcset="/images/thumb/1/17/TinyDuna.png/150px-TinyDuna.png 1.5x, /images/thumb/1/17/TinyDuna.png/200px-TinyDuna.png 2x" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Dres" title="Jupiter"><img alt="TinyDres.png" (mouseover)="playSaber()"
+                  <td class="rotating"> <a href="/wiki/Dres" title="Jupiter"><img alt="TinyDres.png"
+                                    (mouseover)="playSaber()"
                                     src="https://wiki.kerbalspaceprogram.com/images/thumb/d/dd/TinyDres.png/100px-TinyDres.png"
                                     width="100" height="100"
                                     srcset="/images/thumb/d/dd/TinyDres.png/150px-TinyDres.png 1.5x, /images/thumb/d/dd/TinyDres.png/200px-TinyDres.png 2x" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Jool" title="Saturne"><img alt="TinyJool.png" (mouseover)="playSaber()"
+                  <td class="rotating"> <a href="/wiki/Jool" title="Saturne"><img alt="TinyJool.png"
+                                    (mouseover)="playSaber()"
                                     src="https://wiki.kerbalspaceprogram.com/images/thumb/3/35/TinyJool.png/100px-TinyJool.png"
                                     width="100" height="100" srcset="/images/3/35/TinyJool.png 1.5x" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Eeloo" title="Uranus"><img alt="TinyEeloo.png" (mouseover)="playSaber()"
+                  <td class="rotating"> <a href="/wiki/Eeloo" title="Uranus"><img alt="TinyEeloo.png"
+                                    (mouseover)="playSaber()"
                                     src="https://wiki.kerbalspaceprogram.com/images/thumb/e/e0/TinyEeloo.png/100px-TinyEeloo.png"
                                     width="100" height="100"
                                     srcset="/images/thumb/e/e0/TinyEeloo.png/150px-TinyEeloo.png 1.5x, /images/thumb/e/e0/TinyEeloo.png/200px-TinyEeloo.png 2x" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Eeloo" title="Neptune"><img alt="TinyEeloo.png" (mouseover)="playSaber()"
+                  <td class="rotating"> <a href="/wiki/Eeloo" title="Neptune"><img alt="TinyEeloo.png"
+                                    (mouseover)="playSaber()"
                                     src="https://wiki.kerbalspaceprogram.com/images/thumb/e/e0/TinyEeloo.png/100px-TinyEeloo.png"
                                     width="100" height="100"
                                     srcset="/images/thumb/e/e0/TinyEeloo.png/150px-TinyEeloo.png 1.5x, /images/thumb/e/e0/TinyEeloo.png/200px-TinyEeloo.png 2x" /></a>
@@ -66,18 +74,27 @@
             </tr>
       </table>
 </body>
-<footer class="footer">
-  <div class="container col-12 d-flex">
-    <ul class="nav d-inline d-md-flex mt-lg-4 col-lg-7 ml-lg-5">
-      <li class="nav-item link">
-        <a class="nav-link active" href="#">A propos</a>
-      </li>
-      <li class="nav-item link">
-        <a class="nav-link" href="#">Mentions légales</a>
-      </li>
-      <!-- <li class="nav-item link">
-           créer les routes--------<a class="nav-link" [routerLink]="../contact">Contact</a>
-        </li>-->
-    </ul>
-  </div>
+
+<footer class="page-footer font-small blue pt-4">
+      <div class="container-fluid text-center text-md-left">
+            <div class="row">
+
+                  <div class="col-md-4 mt-md-0 mt-3 text-center">
+                        <a routerLink="/legalInf">Mentions légales</a>
+                  </div>
+
+                  <hr class="clearfix w-100 d-md-none pb-3">
+
+                  <div class="col-md-4 mb-md-0 mb-3 text-center">
+                        <a routerLink="/aboutUs">A propos</a>
+                  </div>
+
+                  <div class="col-md-4 mb-md-0 mb-3 text-center">
+                        <a routerLink="/contact">Contact</a>
+                  </div>
+            </div>
+      </div>
+      <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            <a href="https://www.wildcodeschool.fr/"> wildcodeschool.fr</a>
+      </div>
 </footer>
