--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,7 +4,7 @@
     margin-top: 7%;
 }
 
-a{
+a,.footer-copyright{
     color: white;
     font-weight: bold;
 }img:hover{
@@ -38,13 +38,6 @@ h1{
 
 }
 
-footer{
-    background-color: black;
-    width: 100%;
-    height:30px;
-    position:absolute;
-    bottom:0;
-   }
 
 video{ 
     position: fixed; right: 0; bottom: 0;
@@ -53,3 +46,7 @@ video{
     background-size: cover; 
     }
 
+footer{
+    background-color: black;
+    margin-top: 15%;
+}
