--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -2,9 +2,45 @@ div{
     color:white;
     font-size: 1rem;
 }
+.aboutUs{
+    margin-top: 8%;
+}
+
+.theTeam{
+    margin-top: 8%;
+    padding-left: 5%;
+}
+
+.title{
+    margin-top: 8%;
+}
 
 .centerButton{
     display: flex;
     justify-content: center;
     margin-top: 5%;
+    padding: 5%;
+}
+h2{
+    font-family: 'Bungee Outline', cursive;
+    text-align: center;
+    color: white;
+    margin-top: 5%;
+    font-size: 4rem;
+    font-weight: bold;
+}
+
+img{
+    max-width: 70%;
+    max-height: 70%;
+}
+
+p{
+    font-size: 1.2rem;
+}
+
+label{
+    font-size: 1.1rem;
+    max-width: 70%;
+    max-height: 70%;
 }
