update css legalinformation component

--- a/src/app/legal-information/legal-information.component.html
+++ b/src/app/legal-information/legal-information.component.html
@@ -3,16 +3,16 @@
 </head>
 
 
-<div class="title text-center p-15">
+<div class="title text-center">
   <h2>Legal information</h2>
 </div>
-<div class="img text-center p-10">
-  <img src="http://galeriedesartistes.g.a.pic.centerblog.net/9c0b5923.gif" alt="animation">
+<div class="img text-center ">
+  <img src="http://i.imgur.com/uLbNwKm.gif" alt="animation">
 </div>
 
-<div class="container-fluid text-justify p-5">
+<div class="container-fluid text-justify p-5 infos">
   <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 p-r-20 p-l-0">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 ">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim
         sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a,
         semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum
@@ -23,7 +23,7 @@
         pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit. </p>
     </div>
     <div class =" col-lg-1 col-xl-2"></div>
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 p-r-20 p-l-0">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 ">
       <p>Ut velit mauris, egestas sed, gravida nec, ornare ut, mi. Aenean ut orci vel massa suscipit pulvinar. Nulla
         sollicitudin. Fusce varius, ligula non tempus aliquam, nunc turpis ullamcorper nibh, in tempus sapien eros vitae
         ligula. Pellentesque rhoncus nunc et augue. Integer id felis. Curabitur aliquet pellentesque diam. Integer quis
