--- a/src/app/legal-information/legal-information.component.css
+++ b/src/app/legal-information/legal-information.component.css
@@ -1,20 +1,29 @@
 div{
     color: white;
 }
-.centerButton{
-    display: flex;
-    justify-content: center;
-    margin-top: 5%;
-}
+
 h2{
     font-family: 'Bungee Outline', cursive;
     text-align: center;
     color: white;
-    margin-top: 5%;
-    font-size: 4rem;
+    margin-top: 4%;
+    font-size: 5rem;
     font-weight: bold;
 }
 
 p{
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+}
+
+.info{
+    padding: 2%
+}
+
+
+.centerButton{
+    display: flex;
+    justify-content: center;
+    margin-top: 2%;
+    padding-bottom: 5%;
+    font-size: 1.3rem;
 }
