--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -29,5 +29,5 @@
   </div>
 </div>
 <div class="centerButton">
-  <button routerLink="/home">Home</button>
+    <button type="button" routerLink="/home" class="btn btn-warning">Home</button>
 </div>
