--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -100,5 +100,5 @@
   </form>
 </div>
 <div class="centerButton">
-    <button routerLink="/home">Home</button>
+    <button type="button" routerLink="/home" class="btn btn-warning">Home</button>
 </div>
