--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,8 +9,12 @@ a,.footer-copyright{
     font-weight: bold;
 }img:hover{
     -webkit-transform: scale(1.3);
-    transform: scale(1.3);
-    
+    transform: scale(1.3);  
+}img{
+    box-shadow: 0px 0px 75px white;
+    border-radius: 50%;
+}.solar{
+    box-shadow: none;
 }
 
 h1{
@@ -19,6 +23,8 @@ h1{
     color: white;
     margin-top: 5%;
     font-size: 8rem;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
 
 }
 
@@ -37,7 +43,29 @@ h1{
     -webkit-animation: rotating 8s linear infinite;
 
 }
-
+@-webkit-keyframes blinker {
+    from {opacity: 1.0;}
+    to {opacity: 0.0;}
+  }
+  .blink{
+      text-decoration: blink;
+      -webkit-animation-name: blinker;
+      -webkit-animation-duration: 0.6s;
+      -webkit-animation-iteration-count:infinite;
+      -webkit-animation-timing-function:ease-in-out;
+      -webkit-animation-direction: alternate;
+      text-shadow: 1px 1px 2px red, 0 0 1em orange, 0 0 0.2em orange;
+      font-size: 3rem;
+      font-weight: bold;
+      color: white;
+      transform: rotate(-8deg);
+-moz-transform: rotate(-8deg);
+-webkit-transform: rotate(-8deg);
+-khtml-transform: rotate(-8deg);
+-ms-transform: rotate(-8deg);
+    margin-left: 60%;
+    margin-top: 0px;
+  }
 
 video{ 
     position: fixed; right: 0; bottom: 0;
@@ -47,6 +75,62 @@ video{
     }
 
 footer{
+    box-shadow: 0px 0px 100px orange;
     background-color: black;
     margin-top: 15%;
+}
+
+.api{
+    margin-right: 5%;
+    margin-left: 5%;
+    text-align: center;
+}
+
+p{
+    color: white;
+}
+
+.marginTitleApi{
+    margin-bottom: 7%;
+    text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
+}.margePicApi{
+    
+}.apiDesc{
+    font-size: 1.5rem;
+}.apiPic{
+    box-shadow: 0px 0px 100px orange;
+    border-radius: 50%;
+}.searchNav{
+    margin-top: 10%;
+    box-shadow: 0px 0px 100px blue;
+    background-color: white;
+
+}.startrek{
+    opacity: 0.7;
+    width: 10%;
+    box-shadow: 0px 0px 100px orange;
+    margin-left: 45%;
+    margin-bottom: 2%;
+}.startrekTit{
+
+    margin-bottom: 2%;
+    font-family: 'Bungee Outline', cursive;
+    font-weight: bold;
+    font-size: 2rem;
+    text-shadow: 1px orange;
+    text-align: center;
+    color: orange;
+}
+
+.controlers{
+    display:flex;
+    margin-bottom: 5%;
+}.planetsaudio{
+    margin-right: 5%;
+}
+
+.controlTit{
+    font-family: 'Bungee Outline', cursive;
+    color: orange;
+    font-weight: bold;
 }
