--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,79 +3,108 @@
 </head>
 
 <body>
-      <!-- <div *ngIf="isVisible">
+       <div *ngIf="isVisible">
             <video autoplay (ended)="isNotVisible()">
                   <source src="../../assets/video/intro.mp4">
             </video>
+      </div> 
+      <button type="button" class="btn btn-primary" (click)="showAudioControls()">Audio control's</button>
+      <div [style.visibility]="showControls ? 'visible' : 'hidden'"> 
+            <div class="controlers">
+                  <div class="planetsaudio">
+                        <h2 class="controlTit">Planet's audio</h2>
+                        <audio controls>
+                              <source src="../../assets/audio/lasersaber.mp3" typ="audio/mpeg">
+                              <source src="../../assets/audio/lasersaber.ogg" typ="audio/ogg">
+                        </audio>
+                  </div>
+                  <div>
+                        <h2 class="controlTit">Background audio</h2>
+                        <audio controls autoplay loop>
+                              <source src="../../assets/audio/vigil.mp3" type="audio/mpeg">
+                              <source src="../../assets/audio/vigil.ogg" type="audio/ogg">
+                        </audio>
+                  </div>
+            </div>
       </div>
-      -->
-      <audio>
-            <source src="../../assets/audio/lasersaber.mp3" typ="audio/mpeg">
-            <source src="../../assets/audio/lasersaber.ogg" typ="audio/ogg">
-      </audio>
-      <audio controls loop autoplay>
-            <source src="../../assets/audio/halo.mp3" type="audio/mpeg">
-            <source src="../../assets/audio/halo.ogg" type="audio/ogg">
-      </audio>
+
       <h1>Space Wiki !</h1>
+      <h2 class="blink">Click on planet and enjoy!</h2>
       <table class="firstDiv">
             <tr>
-                  <td class="rotating"> <a><img alt="TinyKerbol.png"
+                  <td class="rotating"> <a (click)="handleClick('Solar')" title="Solar"><img alt="TinyKerbol.png"
                                     (mouseover)="playSaber()"
-                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/9/96/TinyKerbol.png/125px-TinyKerbol.png"
-                                    width="250" height="250"></a>
+                                    src="https://vignette.wikia.nocookie.net/dis-space-boi/images/a/a1/A8584B8C-1E9C-4093-92FF-D7B936D0C17A.png/revision/latest?cb=20180118132757"
+                                    width="350" height="350" class="solar"/></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Moho" title="Mercure"><img alt="TinyMoho.png"
+                  <td class="rotating"> <a (click)="handleClick('Mercury')" title="Mercure"><img alt="TinyMoho.png"
                                     (mouseover)="playSaber()"
-                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/3/31/TinyMoho.png/100px-TinyMoho.png"
-                                    width="100" height="100" srcset="/images/3/31/TinyMoho.png 1.5x" /></a>
+                                    src="https://66.media.tumblr.com/958510540cecef8e754afc20d418d76b/tumblr_pc50ffy6zo1vs5f7yo4_250.png"
+                                    width="100" height="100" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Eve" title="Venus"><img alt="TinyEve.png"
+                  <td class="rotating"> <a (click)="handleClick('Venus')" title="Venus"><img alt="TinyEve.png"
                                     (mouseover)="playSaber()"
-                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/0/03/TinyEve.png/100px-TinyEve.png"
-                                    width="100" height="100"
-                                    srcset="/images/thumb/0/03/TinyEve.png/150px-TinyEve.png 1.5x, /images/thumb/0/03/TinyEve.png/200px-TinyEve.png 2x" /></a>
+                                    src="https://www.pinclipart.com/picdir/big/78-788496_jupiter-clipart-venus-planet-venus-planet-without-background.png"
+                                    width="100" height="100" /></a>
                   </td>
-                  <td class="rotating"> <a routerLink="/demo" title="Earth"><img alt="TinyKerbin.png"
+                  <td class="rotating"> <a (click)="handleClick('Earth')" title="Earth"><img alt="TinyKerbin.png"
                                     (mouseover)="playSaber()"
                                     src="https://wiki.kerbalspaceprogram.com/images/thumb/5/5d/TinyKerbin.png/100px-TinyKerbin.png"
-                                    width="100" height="100"
-                                    srcset="/images/thumb/5/5d/TinyKerbin.png/150px-TinyKerbin.png 1.5x, /images/thumb/5/5d/TinyKerbin.png/200px-TinyKerbin.png 2x" /></a>
+                                    width="100" height="100" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Duna" title="Mars"><img alt="TinyDuna.png"
+                  <td class="rotating"> <a (click)="handleClick('Mars')" title="Mars"><img alt="TinyDuna.png"
                                     (mouseover)="playSaber()"
                                     src="https://wiki.kerbalspaceprogram.com/images/thumb/1/17/TinyDuna.png/100px-TinyDuna.png"
-                                    width="100" height="100"
-                                    srcset="/images/thumb/1/17/TinyDuna.png/150px-TinyDuna.png 1.5x, /images/thumb/1/17/TinyDuna.png/200px-TinyDuna.png 2x" /></a>
+                                    width="100" height="100" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Dres" title="Jupiter"><img alt="TinyDres.png"
+                  <td class="rotating"> <a (click)="handleClick('Jupiter')" title="Jupiter"><img alt="TinyDres.png"
                                     (mouseover)="playSaber()"
-                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/d/dd/TinyDres.png/100px-TinyDres.png"
-                                    width="100" height="100"
-                                    srcset="/images/thumb/d/dd/TinyDres.png/150px-TinyDres.png 1.5x, /images/thumb/d/dd/TinyDres.png/200px-TinyDres.png 2x" /></a>
+                                    src="https://kunisan.jp/planets/jupiter.gif"
+                                    width="100" height="100"/></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Jool" title="Saturne"><img alt="TinyJool.png"
+                  <td class="rotating"> <a (click)="handleClick('Saturn')" title="Saturne"><img alt="TinyJool.png"
                                     (mouseover)="playSaber()"
-                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/3/35/TinyJool.png/100px-TinyJool.png"
-                                    width="100" height="100" srcset="/images/3/35/TinyJool.png 1.5x" /></a>
+                                    src="https://cdn.pixabay.com/photo/2017/04/04/14/26/pluto-2201446_640.png"
+                                    width="100" height="100" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Eeloo" title="Uranus"><img alt="TinyEeloo.png"
+                  <td class="rotating"> <a (click)="handleClick('Uranus')" title="Uranus"><img alt="TinyEeloo.png"
                                     (mouseover)="playSaber()"
-                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/e/e0/TinyEeloo.png/100px-TinyEeloo.png"
-                                    width="100" height="100"
-                                    srcset="/images/thumb/e/e0/TinyEeloo.png/150px-TinyEeloo.png 1.5x, /images/thumb/e/e0/TinyEeloo.png/200px-TinyEeloo.png 2x" /></a>
+                                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAnJIBMIaAa93NPtZuVRsL9EkLCLkRV01vnoUX6dWHo7_XfjJc"
+                                    width="100" height="100" /></a>
                   </td>
-                  <td class="rotating"> <a href="/wiki/Eeloo" title="Neptune"><img alt="TinyEeloo.png"
+                  <td class="rotating"> <a (click)="handleClick('Neptune')" title="Neptune"><img alt="TinyEeloo.png"
                                     (mouseover)="playSaber()"
-                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/e/e0/TinyEeloo.png/100px-TinyEeloo.png"
-                                    width="100" height="100"
-                                    srcset="/images/thumb/e/e0/TinyEeloo.png/150px-TinyEeloo.png 1.5x, /images/thumb/e/e0/TinyEeloo.png/200px-TinyEeloo.png 2x" /></a>
+                                    src="https://res.cloudinary.com/dk-find-out/image/upload/q_80,w_1920,f_auto/AW_187527_OUTERPLANETS_Neptune_hx4ioc.png"
+                                    width="100" height="100" /></a>
                   </td>
             </tr>
       </table>
+      <h1 class="marginTitleApi">{{title}}</h1>
+      <div *ngFor="let item of images">
+            <div class="row api">
+                  <div class="margePicApi" class="col-4">
+                        <p> <img src={{images}} width="500" height="500" class="apiPic" /></p>
+                  </div>
+                  <div class="col-8">
+                        <p class="apiDesc">{{description}}</p>
+                        <button (click)="changeImage()">Change picture!</button>
+                  </div>
+                  <div class="col-12 searchNav">
+                        <iframe src="https://images.nasa.gov/" width="100%" height="750" class="col-4">
+                        </iframe>
+                        <iframe src="https://solarsystem.nasa.gov/" width="100%" height="750" class="col-8">
+                        </iframe>
+
+                  </div>
+            </div>
+      </div>
+
 </body>
 
+
 <footer class="page-footer font-small blue pt-4">
+      <p class="startrekTit">Do you want startrek ?</p>
+      <a routerLink="/starTrek"> <img class="startrek" src="../../assets/pic/astrowalk.gif"> </a>
       <div class="container-fluid text-center text-md-left">
             <div class="row">
 
@@ -98,3 +127,4 @@
             <a href="https://www.wildcodeschool.fr/"> wildcodeschool.fr</a>
       </div>
 </footer>
+<router-outlet></router-outlet>
