Applying responsive design, adjust some CSS

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -104,6 +104,6 @@
 </div>
 <div class="centerButton">
 
-    <button type="button" routerLink="/home" class="btn btn-warning">Home</button>
+    <button type="button" class="btn btn-primary" routerLink="/home">Home</button>
 </div>
 
