--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -35,5 +35,5 @@
    </div> 
 </div>
 <div class="centerButton">
-    <button type="button" routerLink="/home" class="btn btn-warning">Home</button>
+    <button type="button" class="btn btn-primary" routerLink="/home">Home</button>
 </div>
