--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,23 +2,24 @@
       <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
 </head>
 
-<body>
-       <div *ngIf="isVisible">
-            <video autoplay (ended)="isNotVisible()">
+<body class="body"> 
+      <div class="control_soundvideo">
+      <div *ngIf="isVisible">
+            <video autoplay (play)="isDesktop()" (ended)="isNotVisible()">
                   <source src="../../assets/video/intro.mp4">
             </video>
-      </div> 
+      </div>
       <button type="button" class="btn btn-primary" (click)="showAudioControls()">Audio control's</button>
+      
       <div [style.visibility]="showControls ? 'visible' : 'hidden'"> 
             <div class="controlers">
-                  <div class="planetsaudio">
+                  <div>
                         <h2 class="controlTit">Planet's audio</h2>
                         <audio controls>
                               <source src="../../assets/audio/lasersaber.mp3" typ="audio/mpeg">
                               <source src="../../assets/audio/lasersaber.ogg" typ="audio/ogg">
                         </audio>
-                  </div>
-                  <div>
+                      
                         <h2 class="controlTit">Background audio</h2>
                         <audio controls autoplay loop>
                               <source src="../../assets/audio/vigil.mp3" type="audio/mpeg">
@@ -27,104 +28,107 @@
                   </div>
             </div>
       </div>
-
-      <h1>Space Wiki !</h1>
-      <h2 class="blink">Click on planet and enjoy!</h2>
+      </div>
+      
+     
+      <div class="mainTitle">
+            <h1>Space Wiki !</h1>
+            <h2 class="blink">Click on planet and enjoy !</h2>
+      </div>
+      <div class="arnaque">
       <table class="firstDiv">
             <tr>
-                  <td class="rotating"> <a (click)="handleClick('Solar')" title="Solar"><img alt="TinyKerbol.png"
-                                    (mouseover)="playSaber()"
-                                    src="https://vignette.wikia.nocookie.net/dis-space-boi/images/a/a1/A8584B8C-1E9C-4093-92FF-D7B936D0C17A.png/revision/latest?cb=20180118132757"
+                  <td class="rotating"> <a (click)="handleClick('Solar')" title="Solar"><img alt="Solar" (mouseover)="playSaber()" 
+                                    src="../../assets/pic/Solar.png"
                                     width="350" height="350" class="solar"/></a>
                   </td>
-                  <td class="rotating"> <a (click)="handleClick('Mercury')" title="Mercure"><img alt="TinyMoho.png"
-                                    (mouseover)="playSaber()"
-                                    src="https://66.media.tumblr.com/958510540cecef8e754afc20d418d76b/tumblr_pc50ffy6zo1vs5f7yo4_250.png"
-                                    width="100" height="100" /></a>
+                  <td class="rotating"> <a (click)="handleClick('Mercury')" title="Mercure"><img alt="Mercure" (mouseover)="playSaber()"
+                                    src="../../assets/pic/Mercure.png"
+                                    width="100" height="100" class="planets"/></a>
                   </td>
-                  <td class="rotating"> <a (click)="handleClick('Venus')" title="Venus"><img alt="TinyEve.png"
-                                    (mouseover)="playSaber()"
-                                    src="https://www.pinclipart.com/picdir/big/78-788496_jupiter-clipart-venus-planet-venus-planet-without-background.png"
-                                    width="100" height="100" /></a>
+                  <td class="rotating"> <a (click)="handleClick('Venus')" title="Venus"><img alt="Venus" (mouseover)="playSaber()"
+                                    src="../../assets/pic/Venus.png"
+                                    width="100" height="100" class="planets"/></a>
                   </td>
-                  <td class="rotating"> <a (click)="handleClick('Earth')" title="Earth"><img alt="TinyKerbin.png"
-                                    (mouseover)="playSaber()"
-                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/5/5d/TinyKerbin.png/100px-TinyKerbin.png"
-                                    width="100" height="100" /></a>
+                  <td class="rotating"> <a (click)="handleClick('Earth')" title="Earth"><img alt="Earth" (mouseover)="playSaber()"
+                                    src="../../assets/pic/Earth.png"
+                                    width="100" height="100" class="planets"/></a>
                   </td>
-                  <td class="rotating"> <a (click)="handleClick('Mars')" title="Mars"><img alt="TinyDuna.png"
-                                    (mouseover)="playSaber()"
-                                    src="https://wiki.kerbalspaceprogram.com/images/thumb/1/17/TinyDuna.png/100px-TinyDuna.png"
-                                    width="100" height="100" /></a>
+                  <td class="rotating"> <a (click)="handleClick('Mars')" title="Mars"><img alt="Mars" (mouseover)="playSaber()"
+                                    src="../../assets/pic/Mars.png"
+                                    width="100" height="100" class="planets"/></a>
                   </td>
-                  <td class="rotating"> <a (click)="handleClick('Jupiter')" title="Jupiter"><img alt="TinyDres.png"
-                                    (mouseover)="playSaber()"
-                                    src="https://kunisan.jp/planets/jupiter.gif"
-                                    width="100" height="100"/></a>
+                  <td class="rotating"> <a (click)="handleClick('Jupiter')" title="Jupiter"><img alt="Jupiter" (mouseover)="playSaber()"
+                                    src="../../assets/pic/Jupiter.png"
+                                    width="100" height="100" class="planets"/></a>
                   </td>
-                  <td class="rotating"> <a (click)="handleClick('Saturn')" title="Saturne"><img alt="TinyJool.png"
-                                    (mouseover)="playSaber()"
-                                    src="https://cdn.pixabay.com/photo/2017/04/04/14/26/pluto-2201446_640.png"
-                                    width="100" height="100" /></a>
+                  <td class="rotating"> <a (click)="handleClick('Saturn')" title="Saturne"><img alt="Saturn" (mouseover)="playSaber()"
+                                    src="../../assets/pic/Saturne.png"
+                                    width="100" height="100" class="planets"/></a>
                   </td>
-                  <td class="rotating"> <a (click)="handleClick('Uranus')" title="Uranus"><img alt="TinyEeloo.png"
-                                    (mouseover)="playSaber()"
-                                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAnJIBMIaAa93NPtZuVRsL9EkLCLkRV01vnoUX6dWHo7_XfjJc"
-                                    width="100" height="100" /></a>
+                  <td class="rotating"> <a (click)="handleClick('Uranus')" title="Uranus"><img alt="Uranus" (mouseover)="playSaber()"
+                                    src="../../assets/pic/Uranus.jpg"
+                                    width="100" height="100" class="planets"/></a>
                   </td>
-                  <td class="rotating"> <a (click)="handleClick('Neptune')" title="Neptune"><img alt="TinyEeloo.png"
-                                    (mouseover)="playSaber()"
-                                    src="https://res.cloudinary.com/dk-find-out/image/upload/q_80,w_1920,f_auto/AW_187527_OUTERPLANETS_Neptune_hx4ioc.png"
-                                    width="100" height="100" /></a>
+                  <td class="rotating"> <a (click)="handleClick('Neptune')" title="Neptune"><img alt="Neptune" (mouseover)="playSaber()"
+                                    src="../../assets/pic/Neptune.png"
+                                    width="100" height="100" class="planets"/></a>
                   </td>
             </tr>
       </table>
-      <h1 class="marginTitleApi">{{title}}</h1>
+      </div>
+      <div class="deuxieme_arnaque">
       <div *ngFor="let item of images">
             <div class="row api">
-                  <div class="margePicApi" class="col-4">
-                        <p> <img src={{images}} width="500" height="500" class="apiPic" /></p>
+                  <div class="marginTitleApi col-lg-12 col-md-12 col-sm-12">
+                        <h2 class="titleApi">
+                              {{title}}
+                        </h2>
                   </div>
-                  <div class="col-8">
+                  <div class="margePicApi" class="col-lg-4 col-md-12 col-sm-12">
+                        <p> <img src={{images}} width="550" height="550" class="apiPic" /></p>
+                  </div>
+                  <div class="col-lg-2"></div>
+                  <div class="col-lg-6 col-md-12 col-sm-12">
                         <p class="apiDesc">{{description}}</p>
-                        <button (click)="changeImage()">Change picture!</button>
+                        <button type="button" class="btn btn-primary" (click)="changeImage()">Change picture!</button>
                   </div>
-                  <div class="col-12 searchNav">
-                        <iframe src="https://images.nasa.gov/" width="100%" height="750" class="col-4">
-                        </iframe>
-                        <iframe src="https://solarsystem.nasa.gov/" width="100%" height="750" class="col-8">
-                        </iframe>
-
+            </div>
+            <div class="row apiSearch">
+                  <div class="col-lg-4 col-md-12 col-sm-12 searchNav">
+                        <iframe src="https://images.nasa.gov/" width="100%" height="750"></iframe>
+                  </div>
+                  <div class="col-lg-8 col-md-12 col-sm-12 searchNav">
+                        <iframe src="https://solarsystem.nasa.gov/" width="100%" height="750"></iframe>
                   </div>
             </div>
       </div>
-
+      <footer class="page-footer font-small blue pt-4">
+            <p class="startrekTit">Do you want startrek ?</p>
+            <a routerLink="/starTrek"> <img class="startrek" src="../../assets/pic/astrowalk.gif"> </a>
+            <div class="container-fluid text-center text-md-left">
+                  <div class="row">
+      
+                        <div class="col-md-4 mt-md-0 mt-3 text-center">
+                              <a routerLink="/legalInf">Mentions légales</a>
+                        </div>
+      
+                        <hr class="clearfix w-100 d-md-none pb-3">
+      
+                        <div class="col-md-4 mb-md-0 mb-3 text-center">
+                              <a routerLink="/aboutUs">A propos</a>
+                        </div>
+      
+                        <div class="col-md-4 mb-md-0 mb-3 text-center">
+                              <a routerLink="/contact">Contact</a>
+                        </div>
+                  </div>
+            </div>
+            <div class="footer-copyright text-center py-3">© 2019 Copyright:
+                  <a href="https://www.wildcodeschool.fr/"> wildcodeschool.fr</a>
+            </div>
+      </footer>
+</div>      
 </body>
 
-
-<footer class="page-footer font-small blue pt-4">
-      <p class="startrekTit">Do you want startrek ?</p>
-      <a routerLink="/starTrek"> <img class="startrek" src="../../assets/pic/astrowalk.gif"> </a>
-      <div class="container-fluid text-center text-md-left">
-            <div class="row">
-
-                  <div class="col-md-4 mt-md-0 mt-3 text-center">
-                        <a routerLink="/legalInf">Mentions légales</a>
-                  </div>
-
-                  <hr class="clearfix w-100 d-md-none pb-3">
-
-                  <div class="col-md-4 mb-md-0 mb-3 text-center">
-                        <a routerLink="/aboutUs">A propos</a>
-                  </div>
-
-                  <div class="col-md-4 mb-md-0 mb-3 text-center">
-                        <a routerLink="/contact">Contact</a>
-                  </div>
-            </div>
-      </div>
-      <div class="footer-copyright text-center py-3">© 2019 Copyright:
-            <a href="https://www.wildcodeschool.fr/"> wildcodeschool.fr</a>
-      </div>
-</footer>
 <router-outlet></router-outlet>
