--- a/src/app/legal-information/legal-information.component.css
+++ b/src/app/legal-information/legal-information.component.css
@@ -6,9 +6,17 @@ h2{
     font-family: 'Bungee Outline', cursive;
     text-align: center;
     color: white;
-    margin-top: 4%;
-    font-size: 5rem;
+    margin-top: 2%;
+    font-size: 4rem;
     font-weight: bold;
+}
+@media only screen and (max-device-width: 530px) {
+    h2{
+        font-size:2rem
+    }
+    img{
+        display: none;
+    }
 }
 
 p{
