--- a/src/app/star-trek/star-trek.component.css
+++ b/src/app/star-trek/star-trek.component.css
@@ -36,3 +36,8 @@ h2{
     width: auto; height: auto; z-index: 500;
     background-size: cover; 
     }
+@media only screen and (max-device-width: 1200px) {
+        .control_soundvideo{
+        display: none;
+        }
+    }
