--- a/src/app/star-trek/star-trek.component.html
+++ b/src/app/star-trek/star-trek.component.html
@@ -1,8 +1,8 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
 </head>
-<div *ngIf="isVisible">
-  <video autoplay (ended)="isNotVisible()">
+<div *ngIf="isVisible" class="control_soundvideo">
+  <video autoplay (play)="isDesktop()" (ended)="isNotVisible()">
     <source src="../../assets/video/hyperspace.mp4">
   </video>
 </div>
@@ -15,5 +15,5 @@
 </h2>
 <iframe src="https://trek.nasa.gov/vesta/index.html" width="70%" height="500" class="trois"></iframe>
 <div class="centerButton">
-  <button type="button" routerLink="/home" class="btn btn-warning">Home</button>
+  <button type="button" routerLink="/home" class="btn btn-primary">Home</button>
 </div>
