Small modification due to grammar error, I push in master because there is no risk of crashing (home.component.html modified)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
                   <source src="../../assets/video/intro.mp4">
             </video>
       </div>
-      <button type="button" class="btn btn-primary" (click)="showAudioControls()">Audio control's</button>
+      <button type="button" class="btn btn-primary" (click)="showAudioControls()">Audio control</button>
       
       <div [style.visibility]="showControls ? 'visible' : 'hidden'"> 
             <div class="controlers">
@@ -33,7 +33,7 @@
      
       <div class="mainTitle">
             <h1>Space Wiki !</h1>
-            <h2 class="blink">Click on planet and enjoy !</h2>
+            <h2 class="blink">Click on a planet and enjoy !</h2>
       </div>
       <div class="arnaque">
       <table class="firstDiv">
@@ -110,13 +110,13 @@
                   <div class="row">
       
                         <div class="col-md-4 mt-md-0 mt-3 text-center">
-                              <a routerLink="/legalInf">Mentions légales</a>
+                              <a routerLink="/legalInf">Legal mentions</a>
                         </div>
       
                         <hr class="clearfix w-100 d-md-none pb-3">
       
                         <div class="col-md-4 mb-md-0 mb-3 text-center">
-                              <a routerLink="/aboutUs">A propos</a>
+                              <a routerLink="/aboutUs">About us</a>
                         </div>
       
                         <div class="col-md-4 mb-md-0 mb-3 text-center">
