--- a/src/app/star-trek/star-trek.component.html
+++ b/src/app/star-trek/star-trek.component.html
@@ -3,7 +3,7 @@
 </head>
 <div *ngIf="isVisible" class="control_soundvideo">
   <video autoplay (play)="isDesktop()" (ended)="isNotVisible()">
-    <source src="../../assets/video/hyperspace.mp4">
+    <source src="./assets/video/hyperspace.mp4">
   </video>
 </div>
 <h2 class="uno">Mars trek :</h2>
